@@ -1,3 +1,8 @@
+11/08/2005 Bob Rossi <bob@brasko.net>
+
+	* tgdb-base/include/tgdb_types.h: Update coding style with indent to
+	GNU coding style.
+
 10/07/2005 Bob Rossi <bob@brasko.net>
 
 	* tgdb-base/include/tgdb.h, tgdb-base/src/tgdb.c: Update coding style
